--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  get: ^4.7.2
+  http: ^1.5.0
+  url_launcher: ^6.3.2
+  share_plus: ^12.0.0
+  cached_network_image: ^3.4.1
+  timeago: ^3.7.1
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
